# python-benchmarking-examples

./: .gitignore  LICENSE.txt  Makefile  README.md  devbox.json  pyproject.toml  requirements.txt
examples/: hello.py  memory_example.py  types.py
tests/: benchmarks_test.py  fixtures.py  hello_test.py  memory_test.py  profile_test.py  profile_with_benchmarks_test.py  profile_with_line_profiler_test.py  simple_timings_test.py  timeit_test.py
